--- a/RMS/RMS_FrontEnd/RMS_FrontEnd.csproj
+++ b/RMS/RMS_FrontEnd/RMS_FrontEnd.csproj
@@ -67,6 +67,12 @@
     <Compile Include="frmFront_Steward.Designer.cs">
       <DependentUpon>frmFront_Steward.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmFront_Table.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmFront_Table.Designer.cs">
+      <DependentUpon>frmFront_Table.cs</DependentUpon>
+    </Compile>
     <Compile Include="Front_Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +86,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmFront_Steward.resx">
       <DependentUpon>frmFront_Steward.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmFront_Table.resx">
+      <DependentUpon>frmFront_Table.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Front_Main.resx">
       <DependentUpon>Front_Main.cs</DependentUpon>
@@ -109,9 +118,25 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj">
+      <Project>{682f0b67-7475-4bd1-bde7-9184ff78ef34}</Project>
+      <Name>BusinessLogic</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BusinessObject\BusinessObject.csproj">
+      <Project>{e1110383-8047-487a-a08c-d6353fe9a343}</Project>
+      <Name>BusinessObject</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DataAccess\DataAccess.csproj">
       <Project>{9b700e62-6c4f-424a-9377-c480b5e8e682}</Project>
       <Name>DataAccess</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Reports\Reports.csproj">
+      <Project>{d86268cc-d369-40f9-bcb3-a5da453208da}</Project>
+      <Name>Reports</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RMS\RMS.csproj">
+      <Project>{046f9364-350b-4224-8d70-d0f1832177c6}</Project>
+      <Name>RMS</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
