--- a/RMS/RMS_FrontEnd/RMS_FrontEnd.csproj
+++ b/RMS/RMS_FrontEnd/RMS_FrontEnd.csproj
@@ -148,6 +148,10 @@
       <Name>RMS</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Resources\coins.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
